# yt-music-downloader

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEPLOY_TO_GITHUB.md  LICENSE  README.md  SECURITY.md  download_playlist.py  pyproject.toml  requirements.txt  setup.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: INSTALLATION.md
examples/: basic_usage.py
