[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yt-music-downloader"
version = "1.0.0"
description = "Advanced YouTube/YouTube Music playlist downloader with rich CLI interface and car audio optimization"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "YT Music Downloader Contributors"}
]
maintainers = [
    {name = "YT Music Downloader Contributors"}
]
keywords = ["youtube", "music", "downloader", "playlist", "mp3", "audio", "car", "automotive", "cli", "rich"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Video",
    "Topic :: Internet :: WWW/HTTP",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Environment :: Console",
]
requires-python = ">=3.8"
dependencies = [
    "yt-dlp>=2023.12.30",
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
audio = ["mutagen>=1.47.0"]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/tu-usuario/yt-music-downloader"
Repository = "https://github.com/tu-usuario/yt-music-downloader.git"
Issues = "https://github.com/tu-usuario/yt-music-downloader/issues"
Changelog = "https://github.com/tu-usuario/yt-music-downloader/blob/main/CHANGELOG.md"
Documentation = "https://github.com/tu-usuario/yt-music-downloader/wiki"

[project.scripts]
yt-music-dl = "download_playlist:app"
ytmusic-dl = "download_playlist:app"

[tool.setuptools]
py-modules = ["download_playlist"]

[tool.black]
line-length = 120
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3

[tool.flake8]
max-line-length = 120
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    ".eggs",
]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]